<resources>
    <string name="app_name">hAIre</string>
    <string name="tab_text_1">Open Jobs</string>
    <string name="tab_text_2">Status</string>
    <string name="tab_register_1">Job Seeker</string>
    <string name="tab_register_2">Company</string>
    <string name="title_home">Home</string>
    <string name="title_jobs">Jobs</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_learning">Learning</string>
    <string name="welcome_message">Welcome to hAIre!</string>
    <string name="tagline">A place to find a job</string>
    <string name="get_started">Get Started</string>
    <string name="login_success">Login success!</string>
    <string name="yes">Next</string>
    <string name="register_success">Register Success!</string>
    <string name="login">Login</string>
    <string name="password_not_match">Password didn\'t match</string>
    <string name="empty_field">There\'s still empty field</string>
    <string name="email_not_registered">Email is not registered yet!</string>
    <string name="password_not_correct">Password is not correct!</string>
    <string name="email_password_empty">Email or password still empty</string>
    <string name="invalid_email">The email is not valid!</string>
    <string name="invalid_password">Password must at least 6 or more</string>
    <string name="delete_confirmation">Are you sure you want to delete your account?</string>
    <string name="description">About</string>
    <string name="open_file">Open File</string>
    <string name="save">Save</string>
    <string name="message_null_picture">Please pick a picture first.</string>
    <string name="add_loker_succes">Add jobs Success</string>

    <string-array name="pengalaman">
        <item>Pengalaman Non-Professional</item>
        <item>Pengalaman Professional</item>
    </string-array>

    <string-array name="edukasi">
        <item>HighSchool Or Below</item>
        <item>Other</item>
        <item>Undergraduate</item>
        <item>Master</item>
        <item>PhD</item>
    </string-array>
</resources>