<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.haire.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_jobs"
        android:name="com.haire.ui.jobs.JobsFragment"
        android:label="@string/title_jobs"
        tools:layout="@layout/fragment_jobs" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.haire.ui.notification.NotificationFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notification" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.haire.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_learning"
        android:name="com.haire.ui.learning.LearningFragment"
        android:label="@string/title_learning"
        tools:layout="@layout/fragment_learning" />
</navigation>